--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,2 +1,5 @@
 <div id="root"></div>
+<script type="text/javascript">
+  window.csrfToken = <%= raw form_authenticity_token.to_json %>;
+</script>
 <script src="http://localhost:3001/main.js"></script>
